frontend/test/should_fail/index_exec_node_fromIndexFromToAsArrayAscending_index_mismatch.grg
#using "index_exec_model.gm"

sequence s(j:int)
{
	{ i:array<Node>=nodesFromIndexFromAsArrayAscending(j, j) }
}